--- a/TODO
+++ b/TODO
@@ -3,9 +3,6 @@ $Id$
 
 *** things to fix/implement next ***
 
-- check code for use of pointers to profile entries, replace them with
-  strings where necessary 
-
 - MessageView:
   + extraction of parameter list and filenames for mime handling/saving
   + some code in wxMessageView relies on unix unlink() behaviour 
@@ -17,7 +14,7 @@ $Id$
    + complete ForwardMessages
    + add other functionality such as undelete messages or stripMime
    + delete and forward don't work properly
-   + NEW flag must be reset
+   + correct handling of message flags: NEW flag must be reset, Read/Replied flags?
 
 - wxLayout:
   + fix wxGTK postscript printing which is pretty broken, compare with wxXt?
@@ -37,6 +34,8 @@ $Id$
   (for being controlled from xbiff like programs)
   idea: read from ~/.M/control whenever being sent a certain signal,
         execute that text as a python script
+
+- write some first configuration dialogs and for opening a folder
 
 - make saving of window positions optional
 
