--- a/TODO
+++ b/TODO
@@ -4,19 +4,13 @@ $Id$
 *** things to fix/implement next ***
 
 - MessageView:
-  + fix MessageCC::GetParameters()
-  + extraction of parameter list and filenames for mime handling/saving
-  + add a "save as html" option, using wxLayoutWindow functionality
-  + add a "save" option first
+  + use parameters from list as default filenames
 
 - wxLayout:
   + fix wxGTK postscript printing which is pretty broken, compare with wxXt?
   + backspace sometimes goes wrong, occasional editing problems ??
   + flicker
   + key bindings for wxLayoutWindow
-
-- ComposeView:
-  + support saving of sent mail (FCC)
 
 - Profile/wxMDialogs
   + fix usage of readEntry to use String objects
@@ -27,8 +21,6 @@ $Id$
 - write some first configuration dialogs and for opening a folder
 
 - configure: USE_WXCONFIG does not get defined!
-
-- suppress superfluous message popup-windows (i.e. c-client status messages)
 
 - WINDOWS: how to do MIME handling?
 
@@ -43,7 +35,7 @@ $Id$
   + add documentation to installation target
   + add OnNewMail callback by counting messages in mailbox
     + add sample callback showing new messages
-
+  + update interface files
 
 *** to implement in near future ***
 
